# django-codemirror6

./: MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: integration.yml  release.yml
docs/: api.rst  conf.py
docs/_templates/: gumroad.html
src/django_codemirror6/: __init__.py  apps.py  tests.py  urls.py  views.py
src/django_codemirror6/static/cm6/: cm6-all-yjs.js  cm6-all-yjs.min.js  cm6-all.js  cm6-all.min.js  cm6-cpp-yjs.js  cm6-cpp-yjs.min.js  cm6-cpp.js  cm6-cpp.min.js  cm6-css-yjs.js  cm6-css-yjs.min.js  cm6-css.js  cm6-css.min.js  cm6-html-yjs.js  cm6-html-yjs.min.js  cm6-html.js  cm6-html.min.js  cm6-java-yjs.js  cm6-java-yjs.min.js  cm6-java.js  cm6-java.min.js  cm6-javascript-yjs.js  cm6-javascript-yjs.min.js  cm6-javascript.js  cm6-javascript.min.js  cm6-json-yjs.js  cm6-json-yjs.min.js  cm6-json.js  cm6-json.min.js  cm6-markdown-yjs.js  cm6-markdown-yjs.min.js  cm6-markdown.js  cm6-markdown.min.js  cm6-php-yjs.js  cm6-php-yjs.min.js  cm6-php.js  cm6-php.min.js  cm6-python-yjs.js  cm6-python-yjs.min.js  cm6-python.js  cm6-python.min.js  (+16 more)
src/django_codemirror6/templates/cm6/: demo.html
tests/: test_codemirror6.py
tests/www/: urls.py
tests/www/settings/: __init__.py
www/: Makefile  cm6.js  codemirror-sql.js  codemirror.js  editor.html  make.py  package.json  test.html  y-codemirror.js
